# kolor

./: Cargo.toml
examples/: Cargo.toml
kolor/: Cargo.toml  build.rs
kolor/src/: lib.rs
kolor/src/details/: color.rs  conversion.rs  generated_matrices.rs  math.rs  transform.rs
matrix-gen/: Cargo.toml
matrix-gen/src/: main.rs
