[package]
name = "kolor-matrix-gen"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
kolor = { version = "0.1.0", path = "../kolor", default-features = false, features = [
    "std",
    "f64"
] }
